# zabbix-argus-glue

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  tox.ini  zabbixargus.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check-commits.yml  format.yml  test.yml  towncrier.yml
src/zabbixargus/: __init__.py  __main__.py  argus_client.py  config.py  core.py  reconciler.py  tags.py  webhook.py  zabbix_client.py
tests/: test_argus_client.py  test_cli.py  test_config.py  test_core.py  test_reconciler.py  test_tags.py  test_webhook.py  test_zabbix_client.py
tests/integration/: test_argus_client_integration.py  test_reconciler_integration.py  test_verify_integration.py
