[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "zabbix-argus-glue"
description = "Synchronizes Zabbix problems with Argus incidents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sikt - Norwegian Agency for Shared Services in Education and Research", email = "kontakt@sikt.no"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp",
    "argus-api-client",
    "pydantic>=2",
    "zabbix-utils[async]",
]
dynamic = ["version"]

[project.scripts]
zabbix-argus-glue = "zabbixargus:main"

[project.urls]
Repository = "https://github.com/Uninett/zabbix-argus-glue"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
test = [
    "pytest>=7",
    "pytest-asyncio",
    "pytest-cov",
    "tox>=4",
]
maintenance = [
    "towncrier",
]
dev = [
    "ruff",
    "pre-commit",
    {include-group = "maintenance"},
    {include-group = "test"},
]

[tool.ruff]
line-length = 88
extend-exclude = [
    ".egg-info",
    "docs",
]
output-format = "full"
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["I"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/zabbix-argus-glue/issues/{issue})"
wrap = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
